--- a/DiepVanDinh/dsnv.html
+++ b/DiepVanDinh/dsnv.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="nhansu.css">
     <link rel="stylesheet" href="phanquyenvavaitro.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="styleall.css">
+    <link rel="stylesheet" href="inventory.css">
+
 </head>
 <body>
     <header>
