--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -126,72 +126,73 @@
         <img src="https://media-cdn-v2.laodong.vn/Storage/NewsPortal/2023/6/2/1200009/01.-Tong-Quan-He-Tho.jpg" alt="Warehouse Background" class="img-fluid w-100">
     </div>
     
-      <main>
+    <main>
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
-        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
-          <div class="col-md-6 p-lg-5 mx-auto my-5">
-            <h1 class="display-3 fw-bold">Tổng quan kho IMB</h1>
-            <h3 class="fw-normal text-muted mb-3">Quản lý, xử lý, trung chuyển hàng hóa của bạn một cách thuận tiện</h3>
-            <div class="d-flex gap-3 justify-content-center lead fw-normal">
-              <a class="icon-link" href="#">
-                Tìm hiểu thêm
-                <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-              </a>
-              <a class="icon-link" href="#">
-                Tới với chúng tôi
-                <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-              </a>
-            </div>
-          </div>
-          <div class="product-device shadow-sm d-none d-md-block"></div>
-          <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-          <div class="container mt-4">  <!-- Added container for better layout -->
-            <div class="row row-cols-1 row-cols-md-3 g-4">  <!-- Bootstrap grid -->
-                <div class="col">
-                    <div class="tongquan">
-                        <h2>Quy trình khép kín</h2>
-                        <p>Với những trang thiết bị hiện đại</p>
-                        <img src="./imagewarehouse/istockphoto-1299083810-612x612.jpg" alt="">
+            <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
+                <div class="col-md-6 p-lg-5 mx-auto my-5">
+                    <h1 class="loc display-3 fw-bold">Tổng quan kho IMB</h1>
+                    <h3 class="fw-normal text-muted mb-3">Quản lý, xử lý, trung chuyển hàng hóa của bạn một cách thuận tiện</h3>
+                    <div class="d-flex gap-3 justify-content-center lead fw-normal">
+                        <a class="icon-link" href="#">
+                            Tìm hiểu thêm
+                            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                        </a>
+                        <a class="icon-link" href="#">
+                            Tới với chúng tôi
+                            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                        </a>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="tongquan">
-                        <h2>Đội ngũ nhân sự</h2>
-                        <p>Tài năng, đầy nhiệt huyết</p>
-                        <img src="./imagewarehouse/images (1).jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="tongquan">
-                        <h2>Kho bãi rộng</h2>
-                        <p>Hơn 1000ha cho Kho chứa hàng</p>
-                        <img src="./imagewarehouse/kho1.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="tongquan">
-                        <h2>Chuyên gia đầu ngành</h2>
-                        <p>Tư vấn hướng dẫn lựa chọn giải pháp</p>
-                        <img src="./imagewarehouse/lg3.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="tongquan">
-                        <h2>Kho vận chuyển đáng tin cậy</h2>
-                        <p>Đội ngũ an ninh với nghiệp vụ cao</p>
-                        <img src="./imagewarehouse/hinh-anh-bao-ve-chuyen-nghiep.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="tongquan">
-                        <h2>Kho trung chuyển chuyên nghiệp</h2>  <!-- Placeholder -->
-                        <p>Bảo đảm hàng hóa của bạn được nguyên vẹn sau quá trình vận chuyển</p>  <!-- Placeholder -->
-                        <img src="./imagewarehouse/—Pngtree—ikea's warehouse layout photography map_1508518.jpg" alt="">  <!-- Placeholder -->
+                <div class="product-device shadow-sm d-none d-md-block"></div>
+                <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+                <div class="container mt-4">  <!-- Added container for better layout -->
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                            <div class="tongquan">
+                                <h2>Quy trình khép kín</h2>
+                                <p>Với những trang thiết bị hiện đại</p>
+                                <img src="./imagewarehouse/istockphoto-1299083810-612x612.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tongquan">
+                                <h2>Đội ngũ nhân sự</h2>
+                                <p>Tài năng, đầy nhiệt huyết</p>
+                                <img src="./imagewarehouse/images (1).jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tongquan">
+                                <h2>Kho bãi rộng</h2>
+                                <p>Hơn 1000ha cho Kho chứa hàng</p>
+                                <img src="./imagewarehouse/kho1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tongquan">
+                                <h2>Chuyên gia đầu ngành</h2>
+                                <p>Tư vấn hướng dẫn lựa chọn giải pháp</p>
+                                <img src="./imagewarehouse/lg3.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tongquan">
+                                <h2>Kho vận chuyển đáng tin cậy</h2>
+                                <p>Đội ngũ an ninh với nghiệp vụ cao</p>
+                                <img src="./imagewarehouse/hinh-anh-bao-ve-chuyen-nghiep.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tongquan">
+                                <h2>Kho trung chuyển chuyên nghiệp</h2>  <!-- Placeholder -->
+                                <p>Bảo đảm hàng hóa của bạn được nguyên vẹn sau quá trình vận chuyển</p>  <!-- Placeholder -->
+                                <img src="./imagewarehouse/—Pngtree—ikea's warehouse layout photography map_1508518.jpg" alt="">  <!-- Placeholder -->
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-      </div>
       </main>
 
     <!-- Footer -->
