--- a/DiepVanDinh/personnel.html
+++ b/DiepVanDinh/personnel.html
@@ -3,65 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warehouse Management Dashboard</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/product/">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-    <link rel="stylesheet" href="styleall.css">
-    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <title>Đăng ký</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="checkvalid.js"></script>
 </head>
 <body>
-    <!-- Khong dung lo go nua -->
-    <!-- Header with Logo -->
-    <!-- <div class="container-fluid py-3">
-        <div class="row">
-            <div class="col-md-2">
-                <img src="imagewarehouse/logokho.jpg" alt="Warehouse Logo" class="img-fluid">
+    <div class="container">
+        <form class="register-form" method="post" action="#" onsubmit="return validform(this);"> <!-- Thêm onsubmit để gọi validform -->
+            <h2>Đăng ký</h2>
+            <div class="form-group">
+                <label for="fullname">Tên đầy đủ:</label>
+                <input type="text" class="form-control" id="fullname" name="fullname" required>
             </div>
-        </div> -->
-
-    <!-- Navigation Menu: Quan ly menu -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">   
-            <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
-                        <ul class="dropdown-menu" aria-labelledby="customerDropdown">
-                            <li><a class="dropdown-item" href="customer.html">Trong nước</a></li>
-                            <li><a class="dropdown-item" href="customer.html">Nước ngoài</a></li>
-                            <li><a class="dropdown-item" href="customer.html">Nội bộ</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Kho hàng</a>
-                        <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
-                            <li><a class="dropdown-item" href="inventory.html">Nhập kho</a></li>
-                            <li><a class="dropdown-item" href="inventory.html">Xuất kho</a></li>
-                            <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="personnel.html">Nhân sự</a></li>
-                </ul> 
-                <div class="">
-                <div class="d-flex ms-auto">
-                    <!-- Register / Login Buttons -->
-                    <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
-                </div>
+            <div class="form-group">
+                <label for="age">Tuổi:</label>
+                <input type="text" class="form-control" id="age" name="age" required>
             </div>
-
-        </div>
-        </div>
-    </nav>
+            <div class="form-group">
+                <label>Giới tính:</label><br>
+                <input type="radio" name="gender" value="Nam"> Nam
+                <input type="radio" name="gender" value="Nữ"> Nữ
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Số điện thoại:</label>
+                <input type="text" class="form-control" id="phone" name="phone" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Mật khẩu:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">Xác nhận mật khẩu:</label>
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Đăng ký</button>
+        </form>
+    </div>
 </body>
-<script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Footer -->
-<footer class="bg-light text-center py-3 mt-4">
-        <p>&copy; Information Technology - IT4 - University of Information and Communication</p>
-</footer>
 </html>
