--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -12,15 +12,6 @@
     <script src="script.js"></script>
   </head>
 <body>
-    <!-- Khong dung lo go nua -->
-    <!-- Header with Logo -->
-    <!-- <div class="container-fluid py-3">
-        <div class="row">
-            <div class="col-md-2">
-                <img src="imagewarehouse/logokho.jpg" alt="Warehouse Logo" class="img-fluid">
-            </div>
-        </div> -->
-    <!-- Navigation Menu: Quan ly menu -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">   
             <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
@@ -128,9 +119,9 @@
     
     <main>
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
-            <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
+            <div class="loc position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
                 <div class="col-md-6 p-lg-5 mx-auto my-5">
-                    <h1 class="loc display-3 fw-bold">Tổng quan kho IMB</h1>
+                    <h1 class="display-3 fw-bold">Tổng quan kho IMB</h1>
                     <h3 class="fw-normal text-muted mb-3">Quản lý, xử lý, trung chuyển hàng hóa của bạn một cách thuận tiện</h3>
                     <div class="d-flex gap-3 justify-content-center lead fw-normal">
                         <a class="icon-link" href="#">
@@ -186,7 +177,7 @@
                             <div class="tongquan">
                                 <h2>Kho trung chuyển chuyên nghiệp</h2>  <!-- Placeholder -->
                                 <p>Bảo đảm hàng hóa của bạn được nguyên vẹn sau quá trình vận chuyển</p>  <!-- Placeholder -->
-                                <img src="./imagewarehouse/—Pngtree—ikea's warehouse layout photography map_1508518.jpg" alt="">  <!-- Placeholder -->
+                                <img src="./imagewarehouse/vanchuyenantoan.jpg" alt="">  <!-- Placeholder -->
                             </div>
                         </div>
                     </div>
