--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -119,9 +119,9 @@
     
     <main>
         <div class="hieu position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
-            <div class="loc position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
+            <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
                 <div class="col-md-6 p-lg-5 mx-auto my-5">
-                    <h1 class="display-3 fw-bold">Tổng quan kho IMB</h1>
+                    <h1 class="loc display-3 fw-bold">Tổng quan kho IMB</h1>
                     <h3 class="fw-normal text-muted mb-3">Quản lý, xử lý, trung chuyển hàng hóa của bạn một cách thuận tiện</h3>
                     <div class="d-flex gap-3 justify-content-center lead fw-normal">
                         <a class="icon-link" href="#">
