chuyển bài Lộc sang Điệp và sửa giao diện Điệp

--- a/DiepVanDinh/ao1.html
+++ b/DiepVanDinh/ao1.html
@@ -33,7 +33,7 @@
             <img src="aoquan/ao1.jpg" alt="Product Image">
         </div>
         <div class="product-info">
-            <h2 class="product-name1">Quần què</h2>
+            <h2 class="product-name1">Quần vải rộng</h2>
             <p class="product-price1">$29.99</p>
             <div class="product-options">
                 <label for="size">Size:</label>
