--- a/DiepVanDinh/customer.html
+++ b/DiepVanDinh/customer.html
@@ -21,6 +21,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="test1.html">Sản phẩm</a></li>
                     <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
@@ -40,14 +41,14 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
-                        <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                            <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
                             <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
                             <li><a class="dropdown-item" href="dsnv.html">Phân quyền</a></li>
                             <li><a class="dropdown-item" href="dsnv.html">Chấm công</a></li>
-                        </ul>
-                      </li>
-                </ul>   
+                            </ul>
+                        </li>
+                </ul>
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
                     <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
@@ -108,27 +109,27 @@
                 <form id="nngoai">
                     <div class="mb-3">
                         <label for="customerCode" class="form-label">Mã khách hàng:</label>
-                        <input type="text" id="n1" name="customerCode" class="form-control" required>
+                        <input type="text" id="customerCode" name="customerCode" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="fullname" class="form-label">Họ tên:</label>
-                        <input type="text" id="n2" name="fullname" class="form-control" required>
+                        <input type="text" id="fullname" name="fullname" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="contactNumber" class="form-label">Số điện thoại:</label>
-                        <input type="tel" id="n3" name="contactNumber" class="form-control" required>
+                        <input type="tel" id="contactNumber" name="contactNumber" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="gmail" class="form-label">Gmail:</label>
-                        <input type="email" id="n4" name="gmail" class="form-control" required>
+                        <input type="email" id="gmail" name="gmail" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Địa chỉ:</label>
-                        <textarea id="n5" name="address" class="form-control" required></textarea>
+                        <textarea id="address" name="address" class="form-control" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="deliveryDate" class="form-label">Ngày giao hàng:</label>
-                        <input type="date" id="n6" name="deliveryDate" class="form-control" required>
+                        <input type="date" id="deliveryDate" name="deliveryDate" class="form-control" required>
                     </div>
                     <button type="button" class="btn btn-primary" onclick="nuocngoai()">Thêm</button>
                 </form>
@@ -137,27 +138,27 @@
                 <form id="nbo">
                     <div class="mb-3">
                         <label for="customerCode" class="form-label">Mã khách hàng:</label>
-                        <input type="text" id="b1" name="customerCode" class="form-control" required>
+                        <input type="text" id="customerCode" name="customerCode" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="fullname" class="form-label">Họ tên:</label>
-                        <input type="text" id="b2" name="fullname" class="form-control" required>
+                        <input type="text" id="fullname" name="fullname" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="contactNumber" class="form-label">Số điện thoại:</label>
-                        <input type="tel" id="b3" name="contactNumber" class="form-control" required>
+                        <input type="tel" id="contactNumber" name="contactNumber" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="gmail" class="form-label">Gmail:</label>
-                        <input type="email" id="b4" name="gmail" class="form-control" required>
+                        <input type="email" id="gmail" name="gmail" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Địa chỉ:</label>
-                        <textarea id="b5" name="address" class="form-control" required></textarea>
+                        <textarea id="address" name="address" class="form-control" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="deliveryDate" class="form-label">Ngày giao hàng:</label>
-                        <input type="date" id="b6" name="deliveryDate" class="form-control" required>
+                        <input type="date" id="deliveryDate" name="deliveryDate" class="form-control" required>
                     </div>
                     <button type="button" class="btn btn-primary" onclick="noibo()">Thêm</button>
                 </form>
