--- a/DiepVanDinh/dsnv.html
+++ b/DiepVanDinh/dsnv.html
@@ -23,6 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="test1.html">Sản phẩm</a></li>
                         <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
@@ -44,9 +45,9 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
                                 <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
-                                <li><a class="dropdown-item" href="dsnv.html#import-tab">Danh sách nhân viên</a></li>
-                                <li><a class="dropdown-item" href="dsnv.html#export-tab">Phân quyền</a></li>
-                                <li><a class="dropdown-item" href="dsnv.html#inventory-tab">Chấm công</a></li>
+                                <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                                <li><a class="dropdown-item" href="dsnv.html">Phân quyền</a></li>
+                                <li><a class="dropdown-item" href="dsnv.html">Chấm công</a></li>
                                 </ul>
                             </li>
                     </ul>
