--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -21,6 +21,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="test1.html">Sản phẩm</a></li>
                         <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
