--- a/DiepVanDinh/report.html
+++ b/DiepVanDinh/report.html
@@ -21,6 +21,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="test1.html">Sản phẩm</a></li>
                 <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
@@ -40,11 +41,11 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="nhansu" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
                         <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
-                            <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
-                            <li><a class="dropdown-item" href="dsnv.html">Phân quyền</a></li>
-                            <li><a class="dropdown-item" href="dsnv.html">Chấm công</a></li>
+                        <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                        <li><a class="dropdown-item" href="dsnv.html">Phân quyền</a></li>
+                        <li><a class="dropdown-item" href="dsnv.html">Chấm công</a></li>
                         </ul>
                     </li>
             </ul>
