--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -20,6 +20,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="test1.html">Sản phẩm</a></li>
                     <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
@@ -49,7 +50,7 @@
                 </ul>
                   <!-- Dark mode -->
                  <label class="switch">
-                    <input type="checkbox" id="darkModeToggle">
+                    <input type="checkbox" id="darkModeToggle" placeholder="darkmode">
                     <span class="slider round"></span>
                   </label>
                 <div class="d-flex ms-auto">
