--- a/DiepVanDinh/test1.html
+++ b/DiepVanDinh/test1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nhi xinh</title>
+    <title>Tổng quan sản phẩm</title>
     <link rel="stylesheet" href="test1.css">
 </head>
 <body>
@@ -23,8 +23,8 @@
         </nav>
         <nav>
             <div class="loginregister">
-                <a href="register.html"> <button class="register-button">Đăng ký</button></a>
-                <a href="login.html"><button class="login-button">Đăng nhập</button></a>
+                <a href="#"> <button class="register-button">Đăng ký</button></a>
+                <a href="#"><button class="login-button">Đăng nhập</button></a>
             </div>
         </nav>
     </header>
