--- a/BaiTapLon_TongHop/test1.html
+++ b/BaiTapLon_TongHop/test1.html
@@ -23,8 +23,8 @@
         </nav>
         <nav>
             <div class="loginregister">
-                <a href="#"> <button class="register-button">Đăng ký</button></a>
-                <a href="#"><button class="login-button">Đăng nhập</button></a>
+                <a href="register1.html"> <button class="register-button">Đăng ký</button></a>
+                <a href="login1.html"><button class="login-button">Đăng nhập</button></a>
             </div>
         </nav>
     </header>
