--- a/DiepVanDinh/customer.html
+++ b/DiepVanDinh/customer.html
@@ -109,27 +109,27 @@
                 <form id="nngoai">
                     <div class="mb-3">
                         <label for="customerCode" class="form-label">Mã khách hàng:</label>
-                        <input type="text" id="customerCode" name="customerCode" class="form-control" required>
+                        <input type="text" id="n1" name="customerCode" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="fullname" class="form-label">Họ tên:</label>
-                        <input type="text" id="fullname" name="fullname" class="form-control" required>
+                        <input type="text" id="n2" name="fullname" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="contactNumber" class="form-label">Số điện thoại:</label>
-                        <input type="tel" id="contactNumber" name="contactNumber" class="form-control" required>
+                        <input type="tel" id="n3" name="contactNumber" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="gmail" class="form-label">Gmail:</label>
-                        <input type="email" id="gmail" name="gmail" class="form-control" required>
+                        <input type="email" id="n4" name="gmail" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Địa chỉ:</label>
-                        <textarea id="address" name="address" class="form-control" required></textarea>
+                        <textarea id="n5" name="address" class="form-control" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="deliveryDate" class="form-label">Ngày giao hàng:</label>
-                        <input type="date" id="deliveryDate" name="deliveryDate" class="form-control" required>
+                        <input type="date" id="n6" name="deliveryDate" class="form-control" required>
                     </div>
                     <button type="button" class="btn btn-primary" onclick="nuocngoai()">Thêm</button>
                 </form>
@@ -138,27 +138,27 @@
                 <form id="nbo">
                     <div class="mb-3">
                         <label for="customerCode" class="form-label">Mã khách hàng:</label>
-                        <input type="text" id="customerCode" name="customerCode" class="form-control" required>
+                        <input type="text" id="b1" name="customerCode" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="fullname" class="form-label">Họ tên:</label>
-                        <input type="text" id="fullname" name="fullname" class="form-control" required>
+                        <input type="text" id="b2" name="fullname" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="contactNumber" class="form-label">Số điện thoại:</label>
-                        <input type="tel" id="contactNumber" name="contactNumber" class="form-control" required>
+                        <input type="tel" id="b3" name="contactNumber" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="gmail" class="form-label">Gmail:</label>
-                        <input type="email" id="gmail" name="gmail" class="form-control" required>
+                        <input type="email" id="b4" name="gmail" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Địa chỉ:</label>
-                        <textarea id="address" name="address" class="form-control" required></textarea>
+                        <textarea id="b5" name="address" class="form-control" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="deliveryDate" class="form-label">Ngày giao hàng:</label>
-                        <input type="date" id="deliveryDate" name="deliveryDate" class="form-control" required>
+                        <input type="date" id="b6" name="deliveryDate" class="form-control" required>
                     </div>
                     <button type="button" class="btn btn-primary" onclick="noibo()">Thêm</button>
                 </form>
