--- a/BaiTapLon_TongHop/test1.html
+++ b/BaiTapLon_TongHop/test1.html
@@ -33,9 +33,9 @@
             <input type="text" placeholder="Tìm kiếm..." class="search-input">
             <button type="submit" class="search-button">Tìm kiếm</button>
         </div>
-    <!-- Slideshow container -->
+    <!-- Slideshow-->
     <div class="slideshow-container">
-        <!-- Slides -->
+
         <div class="mySlides fade">
             <img src="anh1.jpg" alt="ao1">
         </div>
